helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-django-service
spec:
  selector:
    app: my-django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
